# cmip7-prep

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  INSTALL.md  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  pytest.yaml
cmip7_prep/: __init__.py  cache_tools.py  cli.py  cmor_dataset.json  cmor_utils.py  cmor_writer.py  dreq.py  dreq_search.py  mapping_compat.py  mom6_static.py  pipeline.py  regrid.py  vertical.py
cmip7_prep/data/: __init__.py  cesm_to_cmip7.yaml  cmor_dataset.json  datarequest_v1_2_2_variables.csv
cmip7_prep/mapping/: cesm_to_cmip7.yaml
data/: __init__.py  cesm_to_cmip7.yaml  cesm_to_cmip7_atmos.yaml  cesm_to_cmip7_land.yaml  cesm_to_cmip7_landice.yaml  cesm_to_cmip7_ocean.yaml  cesm_to_cmip7_seaice.yaml  cmor_dataset.json  cmor_dataset_noresm.json  depth_bnds.nc  noresm_to_cmip7.yaml  noresm_to_cmip7_aerosol.yaml  noresm_to_cmip7_atmos.yaml  noresm_to_cmip7_atmosChem.yaml  noresm_to_cmip7_land.yaml  noresm_to_cmip7_seaice.yaml
scripts/: atm_monthly.py  cmor_driver.py  convert_csv_to_yaml.py  daily_cmor.py  find_unmapped_vars.py  fullLmon.py  fullLmon.sh  fullamon.sh  fullomon.sh  gen_timeseries.py  lnd_monthly.py  monthly_cmor.py  query_missing_vars.py  setup_nird.sh  testbaseline_monthly.py  testfindvariables.py  testone.py  validate_cmor_output.py  yaml_to_csv.py
src/cmip7_prep/: __init__.py  cache_tools.py  cmor_utils.py  cmor_writer.py  mapping_compat.py  mom6_static.py  pipeline.py  regrid.py  unused_functions.py  variable_selection.py  vertical.py
src/cmip7_prep/data/: cmor_dataset.json
tests/: conftest.py  test_cache_tools.py  test_cmor_sessions_attrs.py  test_cmor_utils_extra.py  test_cmor_writer.py  test_cmor_writer_helpers.py  test_cmor_writer_load_table.py  test_convert_csv_to_yaml.py  test_dreq_search.py  test_dreq_search_packaged.py  test_mapping_compat.py  test_mapping_compat_extra.py  test_mom6_static.py  test_pipeline.py  test_regrid_latlon.py  test_unused_functions.py  test_validate_cmor_output.py  test_variable_selection.py  test_vertical.py  test_yaml_to_csv.py
