[tool.poetry]
name = "cmip7-prep"
version = "0.1.0"
description = "Prepare CESM and NorESM outputs for CMIP7 using CMOR, with SE->1deg (CESM) and NorESM (SE->1deg and 2deg) regridding."
authors = ["Jim Edwards <jedwards@example.com>"]
readme = "README.md"
include = [
  { path = "src/cmip7_prep/data/**" }
]

[tool.poetry.dependencies]
python = ">=3.10.13,<3.14"

# Dependency management is now handled by your conda environment.
# Example setup:
#   conda create -n cmip7-prep python=3.13 xarray numpy dask xesmf cmor cftime pyyaml click pandas tqdm
#   conda activate cmip7-prep
#   pip install dulwich
# Optional performance
dask = {extras = ["array", "distributed"], version = "^2024.7.0", optional = true}
zarr = {version = "^2.18.2", optional = true}

[tool.poetry.extras]
parallel = ["dask", "zarr"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.0"
mypy = "^1.10.0"
pre-commit = "4.3.0"

[tool.poetry.scripts]
cmip7-prep = "cmip7_prep.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
