[tool.poetry]
name = "cmip7-prep"
version = "0.2.0"
description = "Prepare CESM outputs for CMIP7 using CMOR, with SE->1deg regridding."
authors = ["Jim Edwards <jedwards@example.com>"]
readme = "README.md"
packages = [{ include = "cmip7_prep", from = "src" }]
# Include non-Python data files in both sdist and wheel
include = [
  { path = "data/**" }
]

[tool.poetry.dependencies]
python = ">=3.10.13,<3.14"

# Dependency management is handled by your conda environment.
# Example setup (Python 3.12 is required for conda cmor 3.15):
#   conda create -n cmip7-prep -c conda-forge python=3.12 cmor=3.15 xarray numpy \
#     dask xesmf cftime pyyaml click pandas tqdm geocat-comp
#   conda activate cmip7-prep
#   pip install -e . --no-deps
#   pip install gents dulwich cmip7-data-request-api
# Optional performance
dask = {extras = ["array", "distributed"], version = "^2024.7.0", optional = true}
zarr = {version = "^2.18.2", optional = true}

[tool.poetry.extras]
parallel = ["dask", "zarr"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.0"
mypy = "^1.10.0"
pre-commit = "4.3.0"

[tool.poetry.scripts]
cmip7-prep = "cmip7_prep.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
